--- a/stylesheets/_base.quotes.scss
+++ b/stylesheets/_base.quotes.scss
@@ -1,21 +1,30 @@
-/*------------------------------------*\
-    #QUOTES
-\*------------------------------------*/
+/*doc
+---
+title: Quote
+name: quote
+category: base
+---
+
+
+```html_example
+<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
+```
+*/
 
 
 
 
 
 /*doc
- ---
- title: Blockquote
- name: blockquote
- category: base
- ---
+---
+title: Blockquote
+name: blockquote
+parent: quote
+---
 
 
 ```html_example
-    <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
+<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
 ```
 */
 blockquote {
